// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatternLock test Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="gap vertical"
      data-gap-size="m"
    />
    <div
      class="gap vertical"
      data-gap-size="s"
    />
    <div
      class="error"
    />
    <div
      class="gap vertical"
      data-gap-size="xl"
    />
  </div>
</div>
`;

exports[`PatternLock test Snapshot tests should match snapshot with error prop 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="gap vertical"
      data-gap-size="m"
    />
    <div
      class="gap vertical"
      data-gap-size="s"
    />
    <div
      class="error"
    >
      Error message
    </div>
    <div
      class="gap vertical"
      data-gap-size="xl"
    />
  </div>
</div>
`;
